# app/Http/Controllers/Api/Admin/RoleController.php
@@ -22,9 +22,9 @@ class RoleController extends Controller
     /**
      * @OA\Post(
      *      path="/api/admin/role/listing",
-     *      operationId="listing",
+     *      operationId="roles-listing",
      *      tags={"admin,role,listing"},
-     *      summary="user",
+     *      summary="role",
      *       security={
      *           {"bearerAuth": {}}
      *       },
@@ -57,209 +57,9 @@ class RoleController extends Controller
                 searchTable($q, $inputs['search'], ['name']);
             });
         }
-        $roles = $query->get();
+        $roles = $query->paginate(PAGINATE);;
         return successWithData(GENERAL_FETCHED_MESSAGE, $roles);
     }
 
-    /**
-     * @OA\Post(
-     *      path="/api/admin/role/store",
-     *      operationId="store",
-     *      tags={"admin,role,store"},
-     *      summary="user",
-     *       security={
-     *           {"bearerAuth": {}}
-     *       },
-     *      description="",
-     *      @OA\Parameter(
-     *          name="name",
-     *          description="Name",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *       ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     */
-    public function store(StoreRequest $request)
-    {
-        try {
-            DB::beginTransaction();
-            $inputs = $request->all();
-            $role = $this->role->newInstance();
-            $role->fill($inputs);
-            $role->password = Hash::make($inputs['password']);
-            if (!$role->save()) {
-                DB::rollback();
-                return errorResponse(GENERAL_ERROR_MESSAGE);
-            }
-            DB::commit();
-            return successWithData(GENERAL_SUCCESS_MESSAGE, $role->fresh());
-        } catch (QueryException $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        } catch (Exception $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        }
-    }
 
-    /**
-     * @OA\Post(
-     *      path="/api/admin/user/update",
-     *      operationId="update",
-     *      tags={"admin,user,update"},
-     *      summary="user",
-     *       security={
-     *           {"bearerAuth": {}}
-     *       },
-     *      description="",
-     *      @OA\Parameter(
-     *          name="id",
-     *          description="Id",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="name",
-     *          description="Name",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="email",
-     *          description="Email",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="role_id",
-     *          description="Role Id",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="object"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="password",
-     *          description="Password",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="password_confirmation",
-     *          description="Password Confirmation",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *       ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     */
-
-    public function update(UpdateRequest $request)
-    {
-        try {
-            DB::beginTransaction();
-            $inputs = $request->all();
-            $user = $this->user->newQuery()->whereId($inputs['id'])->first();
-            $user->fill($inputs);
-            $user->password = Hash::make($inputs['password']);
-            if (!$user->save()) {
-                DB::rollback();
-                return errorResponse(GENERAL_ERROR_MESSAGE);
-            }
-            $user->roles()->sync($inputs['role_id']);
-            DB::commit();
-            return successWithData(GENERAL_UPDATED_MESSAGE, $user->fresh());
-        } catch (QueryException $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        } catch (Exception $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        }
-    }
-
-    /**
-     * @OA\Post(
-     *      path="/api/admin/user/delete",
-     *      operationId="delete",
-     *      tags={"admin,user,delete"},
-     *      summary="user",
-     *       security={
-     *           {"bearerAuth": {}}
-     *       },
-     *      description="",
-     *      @OA\Parameter(
-     *          name="id",
-     *          description="Id",
-     *          required=true,
-     *           in="query",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *       ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     */
-    public function delete(DeleteRequest $request)
-    {
-        try {
-            DB::beginTransaction();
-            $inputs = $request->all();
-            $user = $this->user->newQuery()->whereId($inputs['id'])->first();
-            $user->roles()->detach();
-            if (!$user->delete()) {
-                DB::rollback();
-                return errorResponse(GENERAL_ERROR_MESSAGE);
-            }
-            DB::commit();
-            return success(GENERAL_DELETED_MESSAGE);
-        } catch (QueryException $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        } catch (Exception $e) {
-            DB::rollBack();
-            return error($e->getMessage(), ERROR_500);
-        }
-    }
 }
