# routes/api.php
@@ -49,6 +49,7 @@ Route::middleware(['auth:sanctum'])->prefix('admin')->group(function () {
     Route::prefix('user')->group(function () {
         Route::controller(UserController::class)->group(function () {
             Route::get('listing', 'listing');
+            Route::get('role/listing', 'roleListing');
             Route::post('store', 'store');
             Route::post('update', 'update');
             Route::post('delete', 'delete');
